# xnot

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  analyze_g04.py  attack.py  attack_results.json  cot.py  data.jsonl  knot.py  llm.py  main.py  not.py  plan.md  pyproject.toml  results.jsonl  rnot.py  run.py  run_attack_eval.py  run_benchmarks.sh  run_g1_v14.py  test.py  test_phase1.py  test_sarcastic.py  verify_g04.py
.claude/: settings.local.json
data/: __init__.py  build_requests.py  loader.py  schema.py  selections.jsonl  validate.py
doc/: 12_knot_v5_wip.md  1_gpt4omini_baseline.md  2_mixed_model_robustness.md  4_knot_parallel_all_attacks.md  7_knot_v3_and_or_parsing.md  8_knot_v4_implementation.md  README.md  TODO.md  anot_architecture.md  appendix_experiment.tex  attack_plan.md  baseline_results.md  baseline_todo  baseline_todo.md  baselines.md  code_quality_audit.md  code_structure.md  condition_design.md  experiment.tex  experiment_log.md  experiment_plan.md  logging.md  notes.md  research_reflection.md  structured_input_baselines.md
explore/: README.md  REASONING_LIMITS.md  SESSION_NOTES.md  allergy_agenda_spec_v3_hard.md  allergy_safety_direct_llm.py  allergy_safety_direct_llm_v2.py  allergy_safety_hard_test.py  annotate.py  build_dataset.py  cot_eval.py  design_loop.py  eval.py  eval_v2.py  eval_v4.py  eval_v5.py  eval_v6.py  g1_allergy.py  g1_anot_eval.py  g1_gt_compute.py  general_anot_eval.py  generate_semantic_gt.py  l2_eval.py  output.json  prepare_data.py  prototype_v2.py  prototype_v3.py  rescore_established.py  scenarios.py  score_auprc.py  (+8 more)
(+968 files in other folders)
