[project]
name = "anot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "httpx>=0.28.1",
    "openai>=2.14.0",
    "rich>=14.2.0",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
